--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
 applications:
- - name: movies-reviews-database
-   random-route: false
+ - name: movies-reviews-database-5f3
+   random-route: true
    memory: 128M
